--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practicando con vue</title>
+    <title>Practicando con vue en github</title>
     <link rel="stylesheet" href="hoy.css">
     <link rel="stylesheet" href="normalize.css">
     <script src="https://unpkg.com/vue@next"></script>
