--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <div class="inicio contenedorFlex">
                     <p>↑ ↑ ↑</p>
                     <p>Mueva la barra de arriba para ver y cambiar entre los ejercicios</p>
+                    <li>v08-0321-2230</li>
                     <li>v08-0321-1950</li>
-                    <li>v08-0321-1830</li>
                 </div>
             </div>
         </div>
@@ -165,15 +165,29 @@
         <div class="displayEjercicio" v-show="Exponer==4" id="ejercicio18">
             <div class="contenedorEjer contenedorFlex">
                 <div class="menuCuerpo contenedorFlex">
-                    <div class="menuSecciones">
+                    <div class="menuSecciones contenedorFlex">
                         <section class="menuSeccion1"> 
-                            <nav class="menuNavigator">
+                            <nav class="menuNavigator" :class="menuClass2">
                                 <ul>
                                     <li>
                                         <a href="#">
                                             <span class="menuIcon"><i class="fa fa-home" aria-hidden="true"></i>
                                             </span>
-                                            <span class="menuTitulo">Opción 1</span>
+                                            <span class="menuTitulo">Submenu 1</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span class="menuIcon"><i class="fa fa-music" aria-hidden="true"></i>
+                                            </span>
+                                            <span class="menuTitulo">Submenu 2</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span class="menuIcon"><i class="fa fa-download" aria-hidden="true"></i></i>
+                                            </span>
+                                            <span class="menuTitulo">Submenu 3</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -185,11 +199,14 @@
                                 <!-- <i class="fa fa-folder" aria-hidden="true"></i> -->
                                 <!-- <i class="fa fa-music" aria-hidden="true"></i> -->
 
+                                <div class="menuDesplegar1" @click="menuCambioClase1" :class="menuClass1">
+    
+                                </div>
                             </nav>
                         </section>
 
                         <section class="menuSeccion2">
-
+                            <p>hola</p>
                         </section>
 
                     </div>
