arreglado letras titulos menus

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                 <!-- <i class="fa fa-music" aria-hidden="true"></i> -->
 
                                 <div class="menuDesplegar" @click="menuActivar1" :class="menu1ActivarClass2">
-    
+                                <p>menu 1</p>
                                 </div>
                             </nav>
                             <nav class="menuNavigator" id="menu1"  :class="menu2ActivarClass1">
