--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                 <!-- <i class="fa fa-music" aria-hidden="true"></i> -->
 
                                 <div class="menuDesplegar" @click="menuActivar2" :class="menu2ActivarClass2">
-    
+                                    <p>menu 2</p>
                                 </div>
                             </nav>
 
@@ -273,14 +273,17 @@
                                 <!-- <i class="fa fa-music" aria-hidden="true"></i> -->
 
                                 <div class="menuDesplegar" @click="menuActivar3" :class="menu3ActivarClass2">
-    
+                                    <p>menu 3</p>
                                 </div>
                             </nav>
 
                         </section>
 
                         <section class="menuSeccion2">
-                            <p>hola</p>
+                            <span></span>
+                            <form action="">
+                                <p>hola</p>
+                            </form>
                         </section>
 
                     </div>
