--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <div class="inicio contenedorFlex">
                     <p>↑ ↑ ↑</p>
                     <p>Mueva la barra de arriba para ver y cambiar entre los ejercicios</p>
+                    <li>v09-0321-2200</li>
                     <li>v09-0321-1920</li>
-                    <li>v08-0321-2230</li>
                 </div>
             </div>
         </div>
@@ -280,9 +280,8 @@
                         </section>
 
                         <section class="menuSeccion2">
-                            <span></span>
+                            <div class="menuBotonAgregar"></div>
                             <form action="">
-                                <p>hola</p>
                             </form>
                         </section>
 
