--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 </div>
             </div>
         </div>
+        <div> 
+            <a href="otra prueba aparte/index.php">
+                        <p>Iniciar php</p>
+            </a>
+        </div>
 
     <!-- Ejercicio 15-----------listo-------------- -->
         <div class="displayEjercicio" v-show="Exponer==1" id="ejercicio15">
